Fix never_called_phone query, statistics based on territory and buttons alignment

--- a/front-end/src/app.css
+++ b/front-end/src/app.css
@@ -19,4 +19,5 @@ input {
 .btn {
   display: inline-flex !important;
   justify-content: center;
+  align-items: center;
 }
